Culling of smoke depending on view direction #57678

Closed
opened 2018-11-07 15:56:06 +01:00 by Mal Duffin · 10 comments
Member

System Information
Windows 10, GTX 1070

Blender Version
Broken: Blender 2.8 Alpha 2 7b271d5fc1

Short description of error
The smoke itself seems to disappear, depending on the rotation of the viewport.

Exact steps for others to reproduce the error

  1. Load up the attached .blend file
  2. Shift A to play the smoke ( let the timeline loop, takes a few seconds, in order to build the smoke sim )

After the first timeline loop, all 4 spheres are emitting smoke, but may not look like it.

  1. Rotate the viewport to see from above the wireframe cube ( smoke domain )

You will see all 4 spheres emitting smoke.

  1. Rotate around the cube, and you'll see that the smoke disappears for some of the spheres depending on the angle of viewing.

The smoke from all 4 spheres should always be visible from all angles.

smoke_culling_bug.blend

Note that the culling happens with just one sphere, having more spheres helps improve the possibility that one of them will be visible.

image.png

image.png

image.png

image.png

**System Information** Windows 10, GTX 1070 **Blender Version** Broken: Blender 2.8 Alpha 2 7b271d5fc11 **Short description of error** The smoke itself seems to disappear, depending on the rotation of the viewport. **Exact steps for others to reproduce the error** 1) Load up the attached .blend file 2) Shift A to play the smoke ( let the timeline loop, takes a few seconds, in order to build the smoke sim ) After the first timeline loop, all 4 spheres are emitting smoke, but may not look like it. 3) Rotate the viewport to see from above the wireframe cube ( smoke domain ) You will see all 4 spheres emitting smoke. 4) Rotate around the cube, and you'll see that the smoke disappears for some of the spheres depending on the angle of viewing. The smoke from all 4 spheres should always be visible from all angles. [smoke_culling_bug.blend](https://archive.blender.org/developer/F5426933/smoke_culling_bug.blend) Note that the culling happens with just one sphere, having more spheres helps improve the possibility that one of them will be visible. ![image.png](https://archive.blender.org/developer/F5427158/image.png) ![image.png](https://archive.blender.org/developer/F5427165/image.png) ![image.png](https://archive.blender.org/developer/F5427177/image.png) ![image.png](https://archive.blender.org/developer/F5427184/image.png)
Author
Member

Added subscriber: @MalDuffin

Added subscriber: @MalDuffin
Author
Member

If I change the camera clip start, it has an effect on the visibility of the smoke.

image.png

image.png

image.png

If I change the camera clip start, it has an effect on the visibility of the smoke. ![image.png](https://archive.blender.org/developer/F5427208/image.png) ![image.png](https://archive.blender.org/developer/F5427217/image.png) ![image.png](https://archive.blender.org/developer/F5427223/image.png)
Member

Added subscribers: @fclem, @lichtwerk

Added subscribers: @fclem, @lichtwerk
Clément Foucault was assigned by Philipp Oeser 2018-11-08 11:14:08 +01:00
Member

@fclem : not sure about smoke in regards to #56352 (atm. smoke also doesnt appear in lookdev/rendered view/ F12 render btw.), but can confirm the display weirdness...
[I am on a nvidia 970m btw.]

@fclem : not sure about smoke in regards to #56352 (atm. smoke also doesnt appear in lookdev/rendered view/ F12 render btw.), but can confirm the display weirdness... [I am on a nvidia 970m btw.]

I can confirm too. I will fix it soon.

I can confirm too. I will fix it soon.

This issue was referenced by 6ba7345ca5

This issue was referenced by 6ba7345ca5393077dddbfaa48651a209b23e9bd0

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Author
Member

Hi Clément,

I tested with the old scene, but it had the same old issue.

However, when I create the scene from scratch it works - but if I then scale the box used for the domain ( s 10 ), then I see the same issue again.

Try these steps.

  1. New Scene
  2. With the default cube selected, open the Physics panel
  3. Select Smoke, then Domain type
  4. Shift A and add a UV Sphere
  5. In the Physics Panel, select Smoke, then Flow
  6. Reselect the Domain cube, and scale it by eg 10

Shift + SPACE and let the timeline run a complete loop, then rotate around the cube to see the issue.

Hi Clément, I tested with the old scene, but it had the same old issue. However, when I create the scene from scratch it works - but if I then scale the box used for the domain ( s 10 ), then I see the same issue again. Try these steps. 1) New Scene 2) With the default cube selected, open the Physics panel 3) Select Smoke, then Domain type 4) Shift A and add a UV Sphere 5) In the Physics Panel, select Smoke, then Flow 6) Reselect the Domain cube, and scale it by eg 10 Shift + SPACE and let the timeline run a complete loop, then rotate around the cube to see the issue.

@MalDuffin what's the build number? the buildbot are only updating around 1am. So you might have tested an old build without the fix.

@MalDuffin what's the build number? the buildbot are only updating around 1am. So you might have tested an old build without the fix.
Author
Member

I had tried to build locally, but I was getting a crash - and did indeed download the latest BuildBot build, which didn't seem to have the commit.

The crash is related to your commit ( https://lists.blender.org/pipermail/bf-blender-cvs/2018-November/116145.html ), see the call stack below ( mutex is null, the crash occurs on BLI_mutex_unlock ).

image.png

If I revert that commit and rebuild, the smoke works as expected - nice one!

I had tried to build locally, but I was getting a crash - and did indeed download the latest BuildBot build, which didn't seem to have the commit. The crash is related to your commit ( https://lists.blender.org/pipermail/bf-blender-cvs/2018-November/116145.html ), see the call stack below ( mutex is null, the crash occurs on BLI_mutex_unlock ). ![image.png](https://archive.blender.org/developer/F5528470/image.png) If I revert that commit and rebuild, the smoke works as expected - nice one!
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#57678
No description provided.