Workbench: Volumes: Fix volumetrics step length calculation

Step size is now one voxel diagonal.
Fix T57678 Culling of smoke depending on view direction